--- a/sayur.css
+++ b/sayur.css
@@ -13,6 +13,15 @@ header{
     background-color: #f8f9fa;
 }
 
+main{
+    height: calc(100vh - 130px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 form{
     display: flex;
     flex-direction: column;
@@ -40,11 +49,6 @@ form div input {
     font-size: medium;
 }
 
-.kaki{
-    color: blue;
-}
-
-
 .navigasi {
   display: flex;
   gap: 20px;
@@ -56,4 +60,14 @@ form div input {
     font-weight: bold;
     font-size: 20px;
     text-decoration: none; 
+}
+
+footer{
+    display: flex;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    background-color: #f8f9fa;
+    color: black;
+    font-size: 14px;
 }
