--- a/sayur.css
+++ b/sayur.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* header */
 header{
     display: flex;
     height:80px;
@@ -13,6 +14,7 @@ header{
     background-color: #f8f9fa;
 }
 
+/* start index.php */
 main{
     height: calc(100vh - 130px);
     display: flex;
@@ -22,6 +24,9 @@ main{
     text-align: center;
 }
 
+/* end index.php */
+
+/*  start login & register */
 form{
     display: flex;
     flex-direction: column;
@@ -71,3 +76,4 @@ footer{
     color: black;
     font-size: 14px;
 }
+/*  start login & register */
