refacoring dan ubah style.css dan revisi index.php

--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="style/index.css" />
+</head>
 <footer >
     <hr />
     <i>Dibuat oleh @RehanFaezan2025. </i>
