--- a/layout/header.html
+++ b/layout/header.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="style/index.css" />
+</head>
 <header>
     <h3> SAYUR KUYY.</h3>
     <nav class = navigasi>
